# technical-test-backend

./: .gitignore  README.md  clean_server.sh  docker-compose.yml  init.sql  integration_tests.sh  start_server.sh
.github/workflows/: integration-tests.yml
python-api/: Dockerfile  requirements.txt
python-api/src/: celery.py  config.py  config.toml  main.py
python-api/src/routes/: compare.py  healthy.py
python-api/src/tests/: test_compare.py
rust-api/: Cargo.toml  Dockerfile  config.toml
rust-api/src/: config.rs  errors.rs  main.rs  routes.rs
rust-api/src/routes/: compare.rs  healthy.rs
