[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
